[package]
authors = ["Jacob Jackson <jacobbfjackson@gmail.com>"]
name = "mcts"
version = "0.3.0"
description = "This is a library for Monte Carlo tree search."
repository = "https://github.com/zxqfl/mcts"
readme = "README.md"
keywords = ["monte", "carlo", "tree", "search", "ai"]
categories = ["algorithms"]
license = "MIT"
edition = "2018"

[dependencies]
atomic_float = "0.1.0"
crossbeam = "0.3"
rand = "0.4"
smallvec = "0.6"
